Add firebase deployment

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "firebase deploy",
+    "build-deploy": "run-s build deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
