--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "appointment-chatbot",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/matthias-baeuerle/appointment-chatbot.git"
+  },
   "dependencies": {
     "adaptivecards": "1.1.3",
     "js-joda": "1.9.3",
