Update theme color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#26a69a",
+  "theme_color": "#004d40",
   "background_color": "#eeeeee"
 }
